# tushare-query-mcp

./: .env.example  .gitignore  CLAUDE-architecture-comprehensive.md  CLAUDE-troubleshooting.md  CLAUDE.md  QWEN.md  README.md  main.py  package-lock.json  pyproject.toml  stock_schema.toml
archive/: CLAUDE-activeContext.md  CLAUDE-tdd-plan.md  README.md
docs/: CHANGELOG.md  MEMORY_BANK_OPTIMIZATION_REPORT.md  README.md
docs/guides/: 企业资产安全性分析指导.md
docs/troubleshooting/: CLAUDE-config-variables.md
scripts/: mcp_server.py  start.py  start_server.py  stop_services.py
src/tushare_query_mcp/: __init__.py  config.py  main.py
src/tushare_query_mcp/api/: base_routes.py  common.py
src/tushare_query_mcp/api/v1/: balance.py  cashflow.py  income.py  stock.py
src/tushare_query_mcp/interfaces/: core.py
src/tushare_query_mcp/schemas/: request.py  response.py
src/tushare_query_mcp/services/: __init__.py  balance_service.py  base_service.py  cashflow_service.py  field_manager.py  income_service.py  stock_service.py  tushare_datasource.py
src/tushare_query_mcp/utils/: cache.py  data_filter.py  field_selector.py
tests/: test_balance_service.py  test_balance_service_old.py  test_cache.py  test_cashflow_service.py  test_cashflow_service_old.py  test_config.py  test_data_filter.py  test_dataframe_handling.py  test_dependency_injection.py  test_e2e.py  test_field_selector.py  test_field_selector_dataframe.py  test_income_service.py  test_income_service_old.py  test_mcp_server.py  test_schemas.py  test_service_dataframe_handling.py  test_tushare_datasource.py
tests/api/: test_routes.py
